--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -5,8 +5,8 @@
 @media (min-width:1300px){
 	.rzm_outside-header {
 	width:100%;
-	background:url(../img/header_bacground.jpg) no-repeat;
-	min-height:200px;
+	background:url(../img/city1.jpg) no-repeat;
+	min-height:250px;
 }
 .thumbnail .media-object{
 	min-width:125%;
