--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -5,7 +5,7 @@
 @media (min-width:1300px){
 	.rzm_outside-header {
 	width:100%;
-	background:url(../img/wood.jpg) no-repeat;
+	background:url(../img/sunset.jpg) no-repeat;
 	min-height:250px;
 }
 .thumbnail .media-object{
@@ -37,7 +37,7 @@
 @media (min-width:1600px){
 	.rzm_outside-header {
 	width:100%;
-	background:url(../img/wood.jpg) no-repeat;
+	background:url(../img/sunset.jpg) no-repeat;
 	min-height:300px;
 }
 	.rzm_profile_nav .primary li {
@@ -64,7 +64,7 @@
 
 	.rzm_outside-header {
 	width:100%;
-	background:url(../img/wood.jpg) no-repeat;
+	background:url(../img/sunset.jpg) no-repeat;
 	min-height:178px;
 	}
 
