--- a/stylesheets/responsive.css
+++ b/stylesheets/responsive.css
@@ -37,7 +37,7 @@
 @media (min-width:1600px){
 	.rzm_outside-header {
 	width:100%;
-	background:url(../img/sunset.jpg) no-repeat;
+	background:url(../img/sunset.jpg) no-repeat center center;
 	min-height:300px;
 }
 	.rzm_profile_nav .primary li {
